--- a/roles/home-automation/values.yaml
+++ b/roles/home-automation/values.yaml
@@ -14,7 +14,7 @@ cluster:
   admin_email: YOUR_EMAIL
   timezone: YOUR_TIMEZONE
 
-# media:
-#   nfs:
-#     server: my-nas
-#     path: /mnt/nfs
+media:
+  nfs:
+    server: my-nas
+    path: /mnt/nfs
