--- a/roles/home-automation/templates/music-assistant.yaml
+++ b/roles/home-automation/templates/music-assistant.yaml
@@ -67,7 +67,7 @@ spec:
         - name: app-template.persistence.data.globalMounts[0].path
           value: '/media'
         - name: app-template.persistence.data.globalMounts[0].subPath
-          value: 'media/music'
+          value: 'media'
           
         - name: app-template.persistence.config.enabled
           value: "true"
