--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -25,7 +25,7 @@
     ],
     timezone: 'America/New_York',
     registryAliases: {
-        'bjw-s': 'https://bjw-s.github.io/helm-charts',
+        'bjw-s': 'https://bjw-s-labs.github.io/helm-charts',
     },
     customManagers: [
         {
