--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -14,7 +14,7 @@ app-template:
           image:
             # renovate: docker-image versioning=loose
             repository: lscr.io/linuxserver/plex
-            tag: 1.41.7.9823
+            tag: 1.41.7.9823-59f304c16
             pullPolicy: IfNotPresent
           env:
             TZ: TIMEZONE
