--- a/roles/media-server/templates/radarr.yaml
+++ b/roles/media-server/templates/radarr.yaml
@@ -54,7 +54,7 @@ spec:
         - name: app-template.controllers.main.containers.main.env.TZ
           value: America/New_York
 
-        - name: app-template.serviceAccount.name
+        - name: app-template.controllers.main.serviceAccount.name
           value: radarr-sa
         - name: app-template.persistence.data.enabled
           value: "true"
