--- a/roles/home-automation/templates/zwavejs2mqtt.yaml
+++ b/roles/home-automation/templates/zwavejs2mqtt.yaml
@@ -43,7 +43,7 @@ spec:
         - name: app-template.controllers.main.containers.main.env.TZ
           value: America/New_York
 
-        - name: app-template.serviceAccount.name
+        - name: app-template.controllers.main.serviceAccount.name
           value: zwavejs2mqtt-sa
         - name: app-template.persistence.config.existingClaim
           value: zwavejs2mqtt-config
