--- a/roles/utilities/disabled/changedetection.yaml
+++ b/roles/utilities/disabled/changedetection.yaml
@@ -55,7 +55,7 @@ spec:
         - name: app-template.controllers.main.containers.main.env.TZ
           value: America/New_York
 
-        - name: app-template.serviceAccount.name
+        - name: app-template.controllers.main.serviceAccount.name
           value: cyberchchangedetectionef-sa
         - name: app-template.persistence.data.existingClaim
           value: changedetection-data-volume
