--- a/charts/satisfactory/templates/service-account.yaml
+++ b/charts/satisfactory/templates/service-account.yaml
@@ -3,4 +3,4 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ $at.serviceAccount.name }}
+  name: {{ $at.controllers.main.serviceAccount.name }}
