--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -34,8 +34,8 @@ app-template:
         main:
           image:
             # renovate: docker-image versioning=loose
-            repository: ghcr.io/home-operations/app
-            tag: 1.0.0.0000
+            #repository: ghcr.io/home-operations/app
+            #tag: 1.0.0.0000
             pullPolicy: IfNotPresent
           env:
             TZ: America/New_York
