--- a/charts/startpunkt/templates/rbac.yaml
+++ b/charts/startpunkt/templates/rbac.yaml
@@ -13,6 +13,9 @@ rules:
 - apiGroups: ["startpunkt.ullberg.us"]
   resources: ["applications", "bookmarks"]
   verbs: ["get", "list", "create", "update", "delete"]
+- apiGroups: ["gateway.networking.k8s.io"]
+  resources: ["httproutes"]
+  verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
