--- a/roles/_old_/base-cluster/templates/kernel-module-management.yaml
+++ b/roles/_old_/base-cluster/templates/kernel-module-management.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   destination:
     namespace: default
@@ -16,5 +18,6 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
   syncPolicy:
-    automated:
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
