--- a/charts/paperless/Chart.yaml
+++ b/charts/paperless/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
-description: A Helm chart to install node-red.
-name: node-red
+description: A Helm chart to install Paperless-NGX.
+name: paperless-ngx
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
 maintainers:
