--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -38,10 +38,26 @@ app-template:
             COMPOSE_PROJECT_NAME: paperless-ngx
             PAPERLESS_TIME_ZONE: America/New_York
             PAPERLESS_URL: https://hostname.example.com
-            # PAPERLESS_DBHOST: valueFrom: { secretKeyRef: { name: paperless-db-pguser-paperless, key: host } }
-            # PAPERLESS_DBNAME: valueFrom: { secretKeyRef: { name: paperless-db-pguser-paperless, key: dbname } }
-            # PAPERLESS_DBUSER: valueFrom: { secretKeyRef: { name: paperless-db-pguser-paperless, key: user } }
-            # PAPERLESS_DBPASS: valueFrom: { secretKeyRef: { name: paperless-db-pguser-paperless, key: password } }
+            PAPERLESS_DBHOST:
+              valueFrom:
+                secretKeyRef:
+                  name: paperless-db-pguser-paperless
+                  key: host
+            PAPERLESS_DBNAME:
+             valueFrom:
+                secretKeyRef:
+                  name: paperless-db-pguser-paperless
+                  key: dbname
+            PAPERLESS_DBUSER:
+              valueFrom:
+                secretKeyRef:
+                  name: paperless-db-pguser-paperless
+                  key: user
+            PAPERLESS_DBPASS:
+              valueFrom:
+                secretKeyRef:
+                  name: paperless-db-pguser-paperless
+                  key: password
             PAPERLESS_REDIS: redis://paperless-ngx-redis.paperless.svc.cluster.local:6379
       serviceAccount:
         name: paperless-ngx-sa
