--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -62,7 +62,7 @@ app-template:
             PAPERLESS_CONSUMPTION_DIR: /data/media/paperless/consume
             PAPERLESS_DATA_DIR: /data/media/paperless/data
             PAPERLESS_MEDIA_ROOT: /data/media/paperless/media
-            PAPERLESS_FILENAME_FORMAT: "{created_year}/{correspondent}/{title}"
+            PAPERLESS_FILENAME_FORMAT: "{{ created_year }}/{{ correspondent }}/{{ title }}"
             PAPERLESS_FILENAME_FORMAT_REMOVE_NONE: true
             PAPERLESS_CONSUMER_POLLING: 60
             PAPERLESS_CONSUMER_DELETE_DUPLICATES: true
@@ -141,6 +141,13 @@ app-template:
             PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://paperless-ngx-gotenberg.paperless.svc.cluster.local:3000
       serviceAccount:
         name: paperless-ngx-sa
+
+  persistence:
+    data:
+      enabled: true
+      existingClaim: data-volume
+      globalMounts:
+        - path: /data
 
   service:
     main:
