--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -15,6 +15,10 @@ application:
 storage:
   config:
     storageClassName: synology-iscsi
+  media:
+    nfs:
+      server: nas
+      path: /volume1/media
 
 app-template:
   controllers:
