--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -151,6 +151,7 @@ app-template:
       enabled: true
       server: nas
       path: /data
+      accessMode: ReadWriteMany
       globalMounts:
         - path: /data
 
