--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -149,10 +149,11 @@ app-template:
   persistence:
     data:
       enabled: true
-      server: nas
-      path: /data
-      globalMounts:
-        - path: /data
+      existingClaim: data-volume
+      advancedMounts:
+        main:
+          main:
+          - path: /data
 
   service:
     main:
