--- a/charts/paperless/templates/data-volume.yaml
+++ b/charts/paperless/templates/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: data-volume
+  name: paperless-data-volume
 spec:
   storageClassName: ""
   capacity:
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-volume
+  name: paperless-data-volume
   labels:
     kasten/skip: "true"
 spec:
@@ -31,5 +31,5 @@ spec:
   resources:
     requests:
       storage: 1Mi
-  volumeName: data-volume
+  volumeName: paperless-data-volume
   storageClassName: ""
