--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -6,7 +6,7 @@ cluster:
 
 application:
   name: Paperless-NGX
-  group: Automation
+  group: Utilities
   icon: simple-icons:paperless
   image: https://raw.githubusercontent.com/paperless-ngx/paperless-ngx/main/docs/logo.png
   description: "A self-hosted document management system that allows you to scan, index, and archive your documents."
