--- a/charts/n8n/templates/n8n-deployment.yaml
+++ b/charts/n8n/templates/n8n-deployment.yaml
@@ -57,11 +57,6 @@ spec:
           name: n8n
           ports:
             - containerPort: 5678
-          serviceAccountName: n8n-sa
-          securityContext:
-            runAsUser: 1000
-            runAsGroup: 1000
-            allowPrivilegeEscalation: false
           resources:
             requests:
               memory: "250Mi"
@@ -70,6 +65,11 @@ spec:
           volumeMounts:
             - mountPath: /home/node/.n8n
               name: n8n-claim0
+      serviceAccountName: n8n-sa
+      securityContext:
+        fsGroup: 0
+        runAsGroup: 0
+        runAsUser: 0
       restartPolicy: Always
       volumes:
         - name: n8n-claim0
