--- a/charts/n8n/templates/n8n-deployment.yaml
+++ b/charts/n8n/templates/n8n-deployment.yaml
@@ -35,6 +35,8 @@ spec:
               value: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/
             - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
               value: "true"
+            - name: N8N_RUNNERS_ENABLED
+              value: "true"
             - name: DB_TYPE
               value: postgresdb
             - name: DB_POSTGRESDB_HOST
