--- a/charts/n8n/templates/route.yaml
+++ b/charts/n8n/templates/route.yaml
@@ -13,7 +13,7 @@ spec:
     name: {{ .Release.Name }}
     weight: 100
   port:
-    targetPort: http
+    targetPort: "5678"
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
