--- a/charts/ollama/values.yaml
+++ b/charts/ollama/values.yaml
@@ -1,3 +1,9 @@
+cluster:
+  top_level_domain: example.com
+  name: openshift
+  admin_email: admin@example.com
+  timezone: America/New_York
+
 config:
   storageClassName: "synology-iscsi"
   
