--- a/charts/ollama/values.yaml
+++ b/charts/ollama/values.yaml
@@ -33,12 +33,10 @@ app-template:
             no_proxy: localhost,127.0.0.1
             OLLAMA_HOST: 0.0.0.0
             DEVICE: Arc
-            OLLAMA_INTEL_GPU: false
-            OLLAMA_NUM_GPU: 1
+            OLLAMA_INTEL_GPU: true
+            OLLAMA_NUM_GPU: 999
             OLLAMA_FLASH_ATTENTION: false
             ZES_ENABLE_SYSMAN: 1
-            GGML_SYCL_DISABLE_OPT: 1
-            GGML_SYCL_DISABLE_GRAPH: 1
             
           resources: 
             requests:
