--- a/roles/media-server/templates/bazarr.yaml
+++ b/roles/media-server/templates/bazarr.yaml
@@ -12,7 +12,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/media-application
+    path: charts/media/bazarr
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
@@ -25,53 +25,11 @@ spec:
           value: {{ .Values.cluster.admin_email }}
         - name: cluster.timezone
           value: {{ .Values.cluster.timezone }}
-          
+
         - name: storage.media.nfs.server
           value: {{ .Values.media.nfs.server }}
         - name: storage.media.nfs.path
           value: {{ .Values.media.nfs.path }}
-
-        - name: application.name
-          value: bazarr
-        - name: application.group
-          value: Media
-        - name: application.icon
-          value: subtitles
-        - name: application.image
-          value: 'https://www.bazarr.media/assets/img/logo.png'
-        - name: application.description
-          value: "Manages subtitles"
-        - name: app-template.service.main.ports.http.port
-          value: '6767'
-
-        # renovate custom-docker versioning=semver
-        - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/home-operations/bazarr
-        - name: app-template.controllers.main.containers.main.image.tag
-          value: 1.5.2
-        - name: app-template.controllers.main.containers.main.image.pullPolicy
-          value: IfNotPresent
-        - name: app-template.controllers.main.containers.main.env.TZ
-          value: America/New_York
-
-        - name: app-template.controllers.main.serviceAccount.name
-          value: bazarr-sa
-        - name: app-template.persistence.data.enabled
-          value: "true"
-        - name: app-template.persistence.data.existingClaim
-          value: bazarr-data-volume
-        - name: app-template.persistence.config.enabled
-          value: "true"
-        - name: app-template.persistence.config.existingClaim
-          value: bazarr-config
-        - name: app-template.persistence.config.globalMounts[0].path
-          value: /config
-
-        - name: app-template.defaultPodOptions.labels.app
-          value: bazarr
-        - name: app-template.defaultPodOptions.labels.version
-          value: 1.4.2
-
   syncPolicy:
 {{ if .Values.spec.syncPolicy.automated.enabled }}
     automated: {}
