--- a/charts/media/bazarr/templates/statefulset.yaml
+++ b/charts/media/bazarr/templates/statefulset.yaml
@@ -26,7 +26,7 @@ spec:
         app.kubernetes.io/name: {{ .Release.Name }}
     spec: 
       enableServiceLinks: false
-      serviceAccountName: {{ .Release.Name }}-sa
+      serviceAccountName: {{ .Release.Name }}
       automountServiceAccountToken: true
       securityContext: 
         fsGroup: 568
