--- a/roles/media-server/templates/gaps.yaml
+++ b/roles/media-server/templates/gaps.yaml
@@ -12,7 +12,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/media-application
+    path: charts/media/gaps
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
@@ -30,47 +30,6 @@ spec:
           value: {{ .Values.media.nfs.server }}
         - name: storage.media.nfs.path
           value: {{ .Values.media.nfs.path }}
-
-        - name: application.name
-          value: Gaps
-        - name: application.group
-          value: Media
-        - name: application.icon
-          value: movie-open
-        - name: application.image
-          value: 'https://raw.githubusercontent.com/JasonHHouse/gaps/master/images/Final-Black.png'
-        - name: application.description
-          value: "Helps find missing movies in a series"
-        - name: app-template.service.main.ports.http.port
-          value: '8484'
-
-        # renovate custom-docker versioning=loose
-        - name: app-template.controllers.main.containers.main.image.repository
-          value: housewrecker/gaps
-        - name: app-template.controllers.main.containers.main.image.tag
-          value: 'x64-v0.10.4'
-        - name: app-template.controllers.main.containers.main.image.pullPolicy
-          value: IfNotPresent
-        - name: app-template.controllers.main.containers.main.env.TZ
-          value: America/New_York
-
-        - name: app-template.controllers.main.serviceAccount.name
-          value: gaps-sa
-        - name: app-template.persistence.data.enabled
-          value: "true"
-        - name: app-template.persistence.data.existingClaim
-          value: gaps-data-volume
-        - name: app-template.persistence.config.enabled
-          value: "true"
-        - name: app-template.persistence.config.existingClaim
-          value: gaps-config
-        - name: app-template.persistence.config.globalMounts[0].path
-          value: /usr/data
-
-        - name: app-template.defaultPodOptions.labels.app
-          value: gaps
-        - name: app-template.defaultPodOptions.labels.version
-          value: '0.10.4'
 
   syncPolicy:
 {{ if .Values.spec.syncPolicy.automated.enabled }}
