--- a/roles/home-automation/templates/zwavejs2mqtt.yaml
+++ b/roles/home-automation/templates/zwavejs2mqtt.yaml
@@ -11,7 +11,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/zwavejs2mqtt
+    path: charts/home-automation/zwavejs2mqtt
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
