feat(charts): fix litellm sa

--- a/charts/litellm/values.yaml
+++ b/charts/litellm/values.yaml
@@ -43,7 +43,7 @@ app-template:
               cpu: 1000m
 
       serviceAccount:
-        name: litellm-sa
+        name: litellm
 
   service:
     main:
