fix(typo): Fix secret vs configmap in litellm
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/statefulset.yaml
+++ b/charts/ai/litellm/templates/statefulset.yaml
@@ -61,5 +61,5 @@ spec:
               memory: 1Gi
       volumes:
         - name: config
-          secret:
-            secretName: {{ .Release.Name }}-config
+          configMap:
+            name: {{ .Release.Name }}-config
