fix(config): Disable redis for litellm
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/config.yaml
+++ b/charts/ai/litellm/templates/config.yaml
@@ -30,4 +30,4 @@ data:
       request_timeout: 600    # raise Timeout error if call takes longer than 600 seconds. Default value is 6000seconds if not set
       set_verbose: False      # Switch off Debug Logging, ensure your logs do not have any debugging on
       json_logs: true         # Get debug logs in json format
-      cache: True
+      cache: False
