--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -20,3 +20,5 @@ pods:
       # renovate custom-docker versioning=semver
       repository: ghcr.io/berriai/litellm
       tag: v1.75.8-stable
+    env:
+      LITELLM_DISABLE_DATABASE: "true"
