--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -22,3 +22,5 @@ pods:
       tag: v1.75.8-stable
     env:
       LITELLM_DISABLE_DATABASE: "true"
+      LITELLM_MASTER_KEY: "sk-secret"
+      LITELLM_SALT_KEY="sk-salt"
