fix(config): litellm
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -24,3 +24,5 @@ pods:
       LITELLM_DISABLE_DATABASE: "true"
       LITELLM_MASTER_KEY: "sk-secret"
       LITELLM_SALT_KEY: "sk-salt"
+      DATABASE_URL: "postgres://..."
+      STORE_MODEL_IN_DB: "False"
