--- a/charts/ai/litellm/templates/config.yaml
+++ b/charts/ai/litellm/templates/config.yaml
@@ -9,12 +9,12 @@ data:
       - model_name: deepseek-r1:1.5b
         litellm_params:
           model: ollama_chat/deepseek-r1:1.5b
-          api_base: "http://ollama.ai.svc.cluster.local:11434"
+          api_base: "http://ollama.ollama.svc.cluster.local:11434"
       - model_name: deepseek-r1:7b
         litellm_params:
           model: ollama_chat/deepseek-r1:7b
-          api_base: "http://ollama.ai.svc.cluster.local:11434"
+          api_base: "http://ollama.ollama.svc.cluster.local:11434"
       - model_name: llama3.2:3b
         litellm_params:
           model: ollama_chat/llama3.2:3b
-          api_base: "http://ollama.ai.svc.cluster.local:11434"
+          api_base: "http://ollama.ollama.svc.cluster.local:11434"
