--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -19,7 +19,7 @@ pods:
     image:
       # renovate custom-docker versioning=semver
       repository: ghcr.io/berriai/litellm-non_root
-      tag: v1.75.8-stable
+      tag: main-v1.75.8-stable
     env:
       LITELLM_MASTER_KEY: "sk-secret"
       LITELLM_SALT_KEY: "sk-salt"
