fix(typo): litellm ui link
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/links.yaml
+++ b/charts/ai/litellm/templates/links.yaml
@@ -4,7 +4,7 @@ kind: ConsoleLink
 metadata:
   name: {{ .Release.Name }}-namespace-dashboard-link
 spec:
-  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/ui
   location: NamespaceDashboard
   namespaceDashboard:
     namespaces:
@@ -16,7 +16,7 @@ kind: ConsoleLink
 metadata:
   name: "{{ .Release.Name }}-application-menu-link"
 spec:
-  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/ui
   location: ApplicationMenu
   applicationMenu:
     section: {{ .Values.application.group | quote }}
@@ -32,6 +32,6 @@ spec:
   group: {{ .Values.application.group | quote }}
   icon: {{ .Values.application.icon | quote }}
   iconColor: {{ .Values.application.iconColor | quote }}
-  url: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  url: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/ui
   info: {{ .Values.application.description | quote }}
   location: {{ .Values.application.location }}
