--- a/charts/ai/litellm/templates/config.yaml
+++ b/charts/ai/litellm/templates/config.yaml
@@ -31,3 +31,17 @@ data:
       set_verbose: False      # Switch off Debug Logging, ensure your logs do not have any debugging on
       json_logs: true         # Get debug logs in json format
       cache: True
+
+    router_settings:
+      routing_strategy: usage-based-routing-v2
+      redis_host: os.environ/REDIS_HOST
+      redis_port: os.environ/REDIS_PORT
+      redis_password: os.environ/REDIS_PASSWORD
+
+    litellm_settings:
+      cache: True
+      cache_params:
+        type: redis
+        host: os.environ/REDIS_HOST
+        port: os.environ/REDIS_PORT
+        password: os.environ/REDIS_PASSWORD
