fix(ollama): path
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/ollama/templates/statefulset.yaml
+++ b/charts/ai/ollama/templates/statefulset.yaml
@@ -52,7 +52,7 @@ spec:
             name: http
             protocol: TCP
           volumeMounts:
-          - mountPath: /root/.ollama
+          - mountPath: /.ollama
             name: data
           {{- if .Values.pods.main.gpu.enabled }}
           resources:
