--- a/charts/ai/ollama/templates/statefulset.yaml
+++ b/charts/ai/ollama/templates/statefulset.yaml
@@ -39,8 +39,6 @@ spec:
             value: {{ .Values.cluster.timezone }}
           - name: OLLAMA_HOST
             value: "0.0.0.0:11434"
-          - name: OLLAMA_DATA
-            value: "/root/.ollama"
           {{ range $key, $value := .Values.pods.main.env }}- name: {{ $key }}
             value: {{ $value | quote }}
           {{ end }}
@@ -85,6 +83,67 @@ spec:
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
+          {{- if or .Values.ollama.models.pull .Values.ollama.models.run .Values.ollama.models.create }}
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - /bin/sh
+                  - -c
+                  - |
+                    while ! /bin/ollama ps > /dev/null 2>&1; do
+                      sleep 5
+                    done
+
+                    {{- $allModels := list -}}
+
+                    {{- if .Values.ollama.models.pull }}
+                    {{- range .Values.ollama.models.pull }}
+
+                    {{- if contains ":" . }}
+                      {{- $allModels = append $allModels . }}
+                    {{- else }}
+                      {{- $allModels = append $allModels (printf "%s:latest" .) }}
+                    {{- end }}
+
+                    /bin/ollama pull {{ternary "--insecure" "" $.Values.ollama.insecure | toString }} {{ . }}
+                    {{- end }}
+                    {{- end }}
+
+                    {{- if .Values.ollama.models.create }}
+                    {{- range .Values.ollama.models.create }}
+                    {{- $allModels = append $allModels .name }}
+                    {{- if .template }}
+                    cat <<EOF > {{ include "ollama.modelsMountPath" $ }}/{{ .name }}
+                    {{- .template | nindent 20 }}
+                    EOF
+                    /bin/ollama create {{ .name }} -f {{ include "ollama.modelsMountPath" $ }}/{{ .name }}
+                    {{- end }}
+                    {{- if .configMapRef }}
+                    /bin/ollama create {{ .name }} -f /models/{{ .name }}
+                    {{- end }}
+                    {{- end }}
+                    {{- end }}
+
+                    {{- if .Values.ollama.models.run }}
+                    {{- range .Values.ollama.models.run }}
+
+                    {{- if contains ":" . }}
+                      {{- $allModels = append $allModels . }}
+                    {{- else }}
+                      {{- $allModels = append $allModels (printf "%s:latest" .) }}
+                    {{- end }}
+
+                    /bin/ollama run {{ . }}
+                    {{- end }}
+                    {{- end }}
+
+                    {{- if .Values.ollama.models.clean }}
+                    /bin/ollama list | awk 'NR>1 {print $1}' | while read model; do
+                      echo "{{ $allModels | join " " }}" | tr ' ' '\n' | grep -Fqx "$model" || /bin/ollama rm "$model"
+                    done
+                    {{- end }}
+          {{- end }}
   volumeClaimTemplates:
   - metadata:
       name: data
