feat(ai): pvcs instead of through ss
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/ollama/templates/statefulset.yaml
+++ b/charts/ai/ollama/templates/statefulset.yaml
@@ -144,12 +144,7 @@ spec:
                     done
                     {{- end }}
           {{- end }}
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes:
-      - ReadWriteOnce
-      resources:
-        requests:
-          storage: 50Gi
+      volumes:
+      - name: data
+        persistentVolumeClaim:
+          claimName: {{ .Release.Name }}-data
