fix: switch openwebui image
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/openwebui/values.yaml
+++ b/charts/ai/openwebui/values.yaml
@@ -40,7 +40,7 @@ pods:
     image:
       # renovate custom-docker versioning=semver
       repository: ghcr.io/open-webui/open-webui
-      tag: "v0.6.26-slim"
+      tag: "main"
     env:
       # OpenWebUI environment variables
       WEBUI_NAME: "Open WebUI"
