--- a/charts/ai/openwebui/values.yaml
+++ b/charts/ai/openwebui/values.yaml
@@ -45,8 +45,8 @@ pods:
       # OpenWebUI environment variables
       WEBUI_NAME: "Open WebUI"
       WEBUI_URL: ""
-      OPENAI_API_BASE_URL: ""
-      OPENAI_API_KEY: ""
+      OPENAI_API_BASE_URL: "http://litellm.litellm.svc.cluster.local:4000/v1"
+      OPENAI_API_KEY: "sk-secret"
       # Enable user registration
       ENABLE_SIGNUP: "true"
       # Default user role for new signups
