--- a/charts/ai/litellm/templates/config.yaml
+++ b/charts/ai/litellm/templates/config.yaml
@@ -18,6 +18,15 @@ data:
         litellm_params:
           model: ollama_chat/llama3.2:3b
           api_base: "http://ollama.ollama.svc.cluster.local:11434"
+      - model_name: github_copilot/gpt-5
+        litellm_params:
+          model: github_copilot/gpt-5
+      - model_name: github_copilot/gpt-5-mini
+        litellm_params:
+          model: github_copilot/gpt-5-mini
+      - model_name: github_copilot/claude-sonnet-4
+        litellm_params:
+          model: github_copilot/claude-sonnet-4
 
     general_settings:
       database_connection_pool_limit: 10 # limit the number of database connections to = MAX Number of DB Connections/Number of instances of litellm proxy (Around 10-20 is good number)
