fix(litellm): writable config.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/statefulset.yaml
+++ b/charts/ai/litellm/templates/statefulset.yaml
@@ -32,6 +32,18 @@ spec:
         runAsUser: 1000
         runAsGroup: 150
         runAsNonRoot: true
+      initContainers:
+        - name: config-setup
+          image: busybox:1.35
+          command: ['sh', '-c', 'cp /tmp/config/config.yaml /app/config.yaml && chown 1000:150 /app/config.yaml']
+          volumeMounts:
+          - mountPath: /tmp/config
+            name: config-source
+          - mountPath: /app
+            name: config-writable
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
       containers:
         - env:
           - name: TZ
@@ -53,7 +65,7 @@ spec:
           name: main
           volumeMounts:
           - mountPath: /app/config.yaml
-            name: config
+            name: config-writable
             subPath: config.yaml
           - mountPath: /.cache
             name: cache
@@ -67,9 +79,11 @@ spec:
               cpu: '4'
               memory: 1Gi
       volumes:
-        - name: config
+        - name: config-source
           configMap:
             name: {{ .Release.Name }}-config
+        - name: config-writable
+          emptyDir: {}
         - name: cache
           emptyDir: {}
         - name: npm
