fix: init runasroot
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/statefulset.yaml
+++ b/charts/ai/litellm/templates/statefulset.yaml
@@ -44,6 +44,7 @@ spec:
           securityContext:
             runAsUser: 0
             runAsGroup: 0
+            runAsNonRoot: false
       containers:
         - env:
           - name: TZ
